<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="4dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_message_profile"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/profile_image"/>

    <TextView
        android:id="@+id/text_message_name"
        android:text="@string/john_doe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@+id/image_message_profile"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="4dp" />

    <TextView
        android:id="@+id/text_message_receiver"
        android:text="@string/hi_man_how_are"
        android:background="@drawable/receiver_messages_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="220dp"
        android:padding="8dp"
        android:textColor="#000000"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/text_message_name"
        app:layout_constraintLeft_toRightOf="@+id/image_message_profile"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/text_message_time_receiver"
        android:text="@string/_11_40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/msg_text_size"
        app:layout_constraintLeft_toRightOf="@+id/text_message_receiver"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_message_receiver" />

    <TextView
        android:id="@+id/text_message_send"
        android:text="@string/hello_hello"
        android:background="@drawable/sender_messages_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="220dp"
        android:padding="10dp"
        android:textColor="#000000"
        android:layout_marginEnd="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/text_message_time_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="10dp"
        android:text="@string/_11_00"
        android:textSize="@dimen/msg_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/text_message_send"
        app:layout_constraintRight_toLeftOf="@+id/text_message_send" />

</androidx.constraintlayout.widget.ConstraintLayout>