<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_message_profile"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/profile_image"/>

    <TextView
        android:id="@+id/text_message_receiver"
        android:text="@string/hi_man_how_are_you"
        android:background="@drawable/rounded_rectangle_orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="240dp"
        android:padding="8dp"
        android:textColor="#ffffff"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/image_message_profile"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/text_message_time_receiver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/_11_40"
        android:textSize="@dimen/msg_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/text_message_receiver"
        app:layout_constraintLeft_toRightOf="@+id/text_message_receiver"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_txt_seen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_message_time_receiver"
        android:padding="5dp"
        app:layout_constraintLeft_toRightOf="@+id/text_message_receiver"
        android:textSize="10sp"
         />

    <TextView
        android:id="@+id/text_message_send"
        android:text="@string/hello_hello"
        android:background="@drawable/rounded_rectangle_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="240dp"
        android:padding="8dp"
        android:textColor="#ffffff"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/text_message_time_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="7dp"
        android:text="@string/_11_00"
        android:textSize="@dimen/msg_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/text_message_send"
        app:layout_constraintRight_toLeftOf="@+id/text_message_send" />

    <TextView
        android:id="@+id/text_seen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/msg_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/text_message_time_receiver"
        app:layout_constraintRight_toLeftOf="@+id/text_message_send"
        />

</androidx.constraintlayout.widget.ConstraintLayout>