<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/message_profile_image"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/profile_image" />

        <TextView
            android:id="@+id/receiver_message_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="100dp"
            android:layout_toEndOf="@+id/message_profile_image"
            android:background="@drawable/receiver_messages_layout"
            android:padding="15dp"
            android:text="@string/receiver_messages_here"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/receiver_message_text"
            android:text="@string/_11_45"
            android:textSize="@dimen/msg_text_size" />

        <TextView
            android:id="@+id/sender_message_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="@+id/receiver_message_text"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="110dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/sender_messages_layout"
            android:padding="15dp"
            android:text="@string/sender_messages"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sender_text_size"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>