<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/users_profile_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/profile_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/users_profile_name"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:text="@string/user_name"
                    android:textAlignment="textStart"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/user_online_status"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/online"
                    tools:ignore="ContentDescription" />


            </LinearLayout>

            <TextView
                android:id="@+id/users_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_status"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/requests_accept_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@android:color/holo_green_light"
                    android:text="@string/accept"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:visibility="invisible"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/requests_cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="15dp"
                    android:background="@android:color/holo_red_dark"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_light"
                    android:textSize="16sp"
                    android:visibility="invisible"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>