<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/profile_activity"
        tools:context=".activity.ProfileActivity">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/visit_profile_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="110dp"
            android:src="@drawable/profile_image" />

        <TextView
            android:id="@+id/visit_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/visit_profile_image"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:text="@string/user_name"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/visit_profile_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/visit_user_name"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="15dp"
            android:text="@string/hey_i_am_using_mychat_app"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/send_message_request_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/visit_profile_status"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="65dp"
            android:background="@drawable/buttons"
            android:text="@string/add_friend"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold" />


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>