<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/settings_toolbar"
            layout="@layout/app_bar_layout" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/set_profile_image"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_below="@+id/settings_toolbar"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/profile_image"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="2dp" />


        <EditText
            android:id="@+id/set_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/set_profile_image"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/inputs"
            android:drawableStart="@drawable/edit_profile"
            android:drawableTint="@color/colorPrimaryDark"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:padding="6dp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryLight"
            android:textStyle="bold"
            tools:targetApi="m" />

        <EditText
            android:id="@+id/set_profile_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/set_user_name"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/inputs"
            android:drawableStart="@drawable/edit_status"
            android:drawableTint="@color/colorPrimaryDark"
            android:hint="@string/default_status"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:padding="6dp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryLight"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:targetApi="m" />

        <Button
            android:id="@+id/update_settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/set_profile_status"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/buttons"
            android:padding="6dp"
            android:text="@string/update"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/change_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/update_settings_button"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/buttons"
            android:padding="6dp"
            android:text="@string/change_password"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold" />


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>