<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/change_pass_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:scaleType="centerInside"
                android:scaleY="1"
                android:src="@drawable/fire"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/change_pass_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/change_pass_image"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="17dp"
                android:background="@drawable/inputs"
                android:drawableStart="@drawable/email"
                android:drawableTint="@color/colorPrimary"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="4dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimaryLight"
                android:textCursorDrawable="@drawable/pink_cursor"
                tools:targetApi="m" />

            <EditText
                android:id="@+id/change_pass_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/change_pass_email"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="17dp"
                android:background="@drawable/inputs"
                android:drawableStart="@drawable/password"
                android:drawableTint="@color/colorPrimary"
                android:hint="@string/old_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="4dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimaryLight"
                android:textCursorDrawable="@drawable/pink_cursor"
                tools:targetApi="m" />

            <EditText
                android:id="@+id/change_pass_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/change_pass_password"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="17dp"
                android:background="@drawable/inputs"
                android:drawableStart="@drawable/password"
                android:drawableTint="@color/colorPrimary"
                android:hint="@string/new_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="4dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimaryLight"
                android:textCursorDrawable="@drawable/pink_cursor"
                tools:targetApi="m" />

            <Button
                android:id="@+id/change_pass_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/change_pass_new_password"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="17dp"
                android:background="@drawable/buttons"
                android:padding="4dp"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />


        </RelativeLayout>


    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>